--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.2.2
   printing: ^5.11.1
   crypto: ^3.0.3
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_lints: ^3.0.1
