--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   printing: ^5.11.1
   crypto: ^3.0.3
   mocktail: ^1.0.3
+  flutter_email_sender: ^6.0.3
+  flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_lints: ^3.0.1
