--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
     sdk: flutter
   flutter_pie_chart: ^0.0.1
   draggable_scrollbar: ^0.1.0
-  fl_chart: ^0.40.0 # Use the latest version available
+  fl_chart: any # Use the latest version available
   reorderables:
-  charts_flutter: 0.12.0
+  # charts_flutter: 0.12.0
   excel: ^3.0.0
   file_picker: ^6.1.1
   sqflite: ^2.0.0+3
