--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   mocktail: ^1.0.3
   flutter_email_sender: ^6.0.3
   flutter_local_notifications: ^17.1.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_lints: ^3.0.1
